# mess2_logger

./: CMakeLists.txt  README.md  package.xml
include/mess2_logger/: msg_logger.hpp  msg_parser.hpp
launch/: experiment.launch.py  experiments.launch.py  logger.launch.py
mess2_logger/: logger_init.py  logger_node.py  trial.py
src/: main.py  msg_logger.cpp  msg_parser.cpp
