<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>mess2_logger</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="marinarasauced@outlook.com">marinarasauced</maintainer>
  <license>MIT License</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <buildtool_depend>ament_cmake_python</buildtool_depend>
  <depend>ament_index_cpp</depend>
  <depend>pybind11_vendor</depend>
  <depend>rclcpp</depend>
  <depend>rclpy</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
